add foto_upload
