# app/Http/Controllers/CategoryController.php
@@ -2,20 +2,24 @@
 
 namespace App\Http\Controllers;
 
+
 use App\Models\Category;
-use Validator;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Storage;
+use Intervention\Image\Facades\Image;
+use Validator;
 
 class CategoryController extends Controller
 {
-     /**
+    /**
      * @OA\Get(
      *     tags={"Category"},
      *     path="/api/category",
      *     @OA\Response(response="200", description="List Categories.")
      * )
      */
-    public function index() {
+    public function index()
+    {
         $list = Category::all();
         return response()->json($list, 200,
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
@@ -28,73 +32,99 @@ class CategoryController extends Controller
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
-     *         description="Category id",
+     *         description="Ідентифікатор категорії",
      *         required=true,
      *         @OA\Schema(
      *             type="number",
      *             format="int64"
      *         )
      *     ),
-     *   security={{ "bearerAuth": {} }},
-     *     @OA\Response(response="200", description="List Categories."),
-     * @OA\Response(
-     *    response=404,
-     *    description="Wrong id",
-     *    @OA\JsonContent(
-     *       @OA\Property(property="message", type="string", example="Wrong category id")
-     *        )
+     *     @OA\Response(response="200",
+     *      description="List Categories."
+     *      ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Категорії не знайдено"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Не авторизований"
      *     )
      * )
      */
-    public function getById($id) {
-        $category = Category::findOrFail($id);
+    public function getById($id)
+    {
+        $category = Category::findorFail($id);
+
+        if (!$category) {
+            return response()->json(['message' => 'Category not found'], 404);
+        }
+
         return response()->json($category, 200,
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
 
     /**
-    * @OA\Post(
-    *     tags={"Category"},
-    *     path="/api/category",
-    *     @OA\RequestBody(
-    *         @OA\MediaType(
-    *             mediaType="multipart/form-data",
-    *             @OA\Schema(
-    *                 required={"name", "image", "description"},
-    *                 @OA\Property(
-    *                     property="image",
-    *                     type="string"
-    *                 ),
-    *                 @OA\Property(
-    *                     property="name",
-    *                     type="string"
-    *                 ),
-    *                 @OA\Property(
-    *                     property="description",
-    *                     type="string"
-    *                 )
-    *             )
-    *         )
-    *     ),
-    *     @OA\Response(response="200", description="Add Category.")
-    * )
-    */
-    public function store(Request $request) {
+     * @OA\Post(
+     *     tags={"Category"},
+     *     path="/api/category",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"name"},
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                  @OA\Property(
+     *                     property="image",
+     *                     type="file"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Add Category.")
+     * )
+     */
+    public function store(Request $request)
+    {
         $input = $request->all();
         $message = array(
-            'name.unique' => "Name must be unique",
-            'name.required'=>"Name is required",
-            'image.required'=>"Image is required",
-            'description.required'=>"Description is required",
+            'name.required' => "Вкажіть назву категорії",
+            'image.required' => "Вкажіть фото категорії",
+            'description.required' => "Вкажіть опис категорії",
         );
-        $validator = Validator::make($input,[
-            'name' => 'required|unique:categories',
-            'image'=>'required',
-            'description'=>'required'
+        $validator = Validator::make($input, [
+            'name' => 'required',
+            'image' => 'required|image|mimes:jpg,jpeg,png,gif,svg',
+            'description' => 'required'
         ], $message);
-        if($validator->fails()) {
+        if ($validator->fails()) {
             return response()->json($validator->errors(), 400,
                 ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+        }
+
+        if ($request->hasFile('image')) {
+            $image = $request->file('image');
+
+            $destinationPath = public_path('/uploads');
+
+            $imageName = uniqid() .'.'.$image->getClientOriginalExtension();
+
+            $imgFile = Image::make($image);
+
+            $imgFile->resize(150, 150, function ($constraint) {
+                $constraint->aspectRatio();
+            })->save($destinationPath . '/' . '150x150_'. $imageName );
+
+            $image->move($destinationPath, $imageName);
+            $input['image'] = $imageName;
+
         }
         $category = Category::create($input);
         return response()->json($category, 200,
@@ -108,6 +138,7 @@ class CategoryController extends Controller
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
+     *         description="Ідентифікатор категорії",
      *         required=true,
      *         @OA\Schema(
      *             type="number",
@@ -121,7 +152,7 @@ class CategoryController extends Controller
      *                 required={"name"},
      *                 @OA\Property(
      *                     property="image",
-     *                     type="string"
+     *                     type="file"
      *                 ),
      *                 @OA\Property(
      *                     property="name",
@@ -136,63 +167,80 @@ class CategoryController extends Controller
      *     ),
      *     @OA\Response(response="200", description="Add Category.")
      * )
-    */
+     */
     public function update($id, Request $request)
     {
-        $category = Category::findOrFail($id);
+        $category = Category::findorFail($id);;
         $input = $request->all();
         $message = array(
-            'name.unique' => "Name must be unique",
-            'name.required' => "Name is required",
-            'image.required' => "Image is required",
-            'description.required' => "Description is required",
+            'name.required' => "Вкажіть назву категорії",
+            'image.required' => "Вкажіть фото категорії",
+            'description.required' => "Вкажіть опис категорії",
         );
         $validator = Validator::make($input, [
-            'id' => 'required|exists:categories',
-            'name' => 'required|unique:categories,name,' . $input['id'],
-            'image' => 'required',
+            'name' => 'required',
+            'image' => 'required|image|mimes:jpg,jpeg,png,gif,svg|max:2048',
             'description' => 'required'
         ], $message);
-
         if ($validator->fails()) {
-            return response()->json($validator->errors(), 400, ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+            return response()->json($validator->errors(), 400,
+                ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
         }
+        if ($request->hasFile('image') && $category['image'] != $input['image']) {
+            unlink(public_path('/thumbnail') .'/'. $category['image']);
+            unlink(public_path('/uploads') .'/'. $category['image']);
+            $image = $request->file('image');
 
+            $destinationPath = public_path('/uploads');
+            $input['image'] ='150x150_'. time().'.'.$image->getClientOriginalExtension();
+            $imgFile = Image::make($image->getRealPath());
+            $imgFile->resize(150, 150, function ($constraint) {
+                $constraint->aspectRatio();
+            })->save($destinationPath . '/' . $input['image'] );
+            $input['image'] = time().'.'.$image->getClientOriginalExtension();
+            $image->move($destinationPath, $input['image']);
+        }
         $category->update($input);
-        return response()->json($category, 200, ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+        return response()->json($category, 200,
+            ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
 
     /**
-    * @OA\Delete(
-    *     path="/api/category/{id}",
-    *     tags={"Category"},
-    *     @OA\Parameter(
-    *         name="id",
-    *         in="path",
-    *         required=true,
-    *         @OA\Schema(
-    *             type="number",
-    *             format="int64"
-    *         )
-    *     ),
-    *     @OA\Response(
-    *         response=200,
-    *         description="Category deleted"
-    *     ),
-    *     @OA\Response(
-    *         response=404,
-    *         description="Category not found"
-    *     ),
-    *     @OA\Response(
-    *         response=401,
-    *         description="Not authorized"
-    *     )
-    * )
-    */
-    public function delete($id)
+     * @OA\Delete(
+     *     path="/api/category/delete/{id}",
+     *     tags={"Category"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Успішне видалення категорії"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Категорії не знайдено"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Не авторизований"
+     *     )
+     * )
+     */
+    public function delete(Request $request, $id)
     {
         $category = Category::findOrFail($id);
+        if (file_exists(public_path('uploads') .'/'. $category['image']))
+        unlink(public_path('uploads') .'/'. $category['image']);
+        if (file_exists(public_path('uploads') .'/'. '150x150_' . $category['image']))
+            unlink(public_path('uploads') .'/'. '150x150_' . $category['image']);
         $category->delete();
-        return response()->json(null, 204);
+        return 204;
     }
 }
