# routes/api.php
@@ -1,9 +1,8 @@
 <?php
 
+use App\Http\Controllers\CategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\CategoryController;
-use App\Http\Controllers\ProductController;
 
 /*
 |--------------------------------------------------------------------------
@@ -19,15 +18,8 @@ use App\Http\Controllers\ProductController;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
 Route::get("/category", [CategoryController::class, "index"]);
-Route::get("/category/{id}", [CategoryController::class, "getById"]);
 Route::post("/category", [CategoryController::class, "store"]);
-Route::post("/category/edit{id}", [CategoryController::class, "update"]);
-Route::delete("/category/{id}", [CategoryController::class, "delete"]);
-
-Route::get("/product", [ProductController::class, "index"]);
-Route::get("/product/{id}", [ProductController::class, "getById"]);
-Route::post("/product", [ProductController::class, "store"]);
-Route::post("/product/edit/{id}", [ProductController::class, "update"]);
-Route::delete("/product/{id}", [ProductController::class, "delete"]);
+Route::post("/category/edit/{id}", [CategoryController::class, "update"]);
+Route::delete("/category/delete/{id}", [CategoryController::class, "delete"]);
+Route::get('/category/{id}', [CategoryController::class, "getById"]);
